deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2022-08-16T06:06:14Z"
  generateName: web-6bf786c76b-
  labels:
    app: web
    pod-template-hash: 6bf786c76b
  name: web-6bf786c76b-pcgjx
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: web-6bf786c76b
    uid: cfcaedce-eac7-4ed8-b674-65eddfb4dbc7
  resourceVersion: "21878"
  uid: 3f114373-1fc0-425b-8178-385ee9d1115e
spec:
  containers:
  - image: gcr.io/google-samples/hello-app:1.0
    imagePullPolicy: IfNotPresent
    name: hello-app
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-4c7n2
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-4c7n2
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-08-16T06:06:14Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-08-16T06:06:19Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-08-16T06:06:19Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-08-16T06:06:14Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://d33994b556491676b66368b09568a5367cc08c381b98814e587d06c075be7c3a
    image: gcr.io/google-samples/hello-app:1.0
    imageID: docker-pullable://gcr.io/google-samples/hello-app@sha256:88b205d7995332e10e836514fbfd59ecaf8976fc15060cd66e85cdcebe7fb356
    lastState: {}
    name: hello-app
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-08-16T06:06:19Z"
  hostIP: 192.168.59.100
  phase: Running
  podIP: 172.17.0.4
  podIPs:
  - ip: 172.17.0.4
  qosClass: BestEffort
  startTime: "2022-08-16T06:06:14Z"
